<resources>
    <string name="app_name">The Complete DnD Companion</string>
    <string name="char_load_button">Load</string>
    <string name="char_new_button">New</string>
    <string name="char_delete_button">Delete</string>
    <string name="spell_load_button">Load</string>
    <string name="spell_new_button">New</string>
    <string name="spell_delete_button">Delete</string>
    <string name="character_manager">Character Manager</string>
    <string name="spellbook_skillset">Spellbooks / Skillsets</string>
    <string name="recent">Recent</string>
    <string name="dice">Dice</string>
    <string name="loot_merchant">Loot / Merchant Table</string>
    <string name="char_name">Name: Test Character</string>
    <string name="char_class">Class: Lv 1 Fighter</string>
    <string name="char_race">Race: Human</string>
    <string name="char_bg">Background: Vagrant</string>
    <string name="char_align">Alignment: True Neutral</string>
    <string name="char_exp">Experience: None</string>
    <string name="char_hd">Hit Dice: 1d10</string>
    <string name="char_init">Initative: 0</string>
    <string name="stat_str">Strength</string>
    <string name="stat_dex">Dexterity</string>
    <string name="stat_con">Constitution</string>
    <string name="stat_int">Intelligence</string>
    <string name="stat_wis">Wisdom</string>
    <string name="stat_cha">Charisma</string>
    <string name="char_hp">0 HP</string>
    <string name="char_ac">10 AC</string>
    <string name="char_str">10</string>
    <string name="char_dex">10</string>
    <string name="char_con">10</string>
    <string name="char_int">10</string>
    <string name="char_wis">10</string>
    <string name="char_cha">10</string>
    <string name="char_mod">Mod: 0</string>
    <string name="cha_save">Save: 0</string>
    <string name="selected_char">Name, Lv 1 Fighter</string>
    <string name="btn_str">Str</string>
    <string name="btn_cha">Cha</string>
    <string name="btn_dex">Dex</string>
    <string name="btn_con">Con</string>
    <string name="btn_wis">Wis</string>
    <string name="btn_int">Int</string>
    <string name="btn_coin">Coin</string>
    <string name="btn_d4">d4</string>
    <string name="btn_d6">d6</string>
    <string name="btn_d8">d8</string>
    <string name="btn_d10">d10</string>
    <string name="btn_d12">d12</string>
    <string name="btn_d20">d20</string>
    <string name="btn_d100">d100</string>
    <string name="btn_add_skill">Add Spell/Skill</string>
    <string name="btn_remove_skill">Remove</string>
    <string name="btn_load_skillset">Load</string>
    <string name="txt_placeholder">This is placeholder text until functionality is developed.</string>
    <string name="rb_loot">Loot</string>
    <string name="rb_Merchant">Merchant</string>
    <string name="loot_entry1">Item Name</string>
    <string name="loot_entry2">Item 2</string>
    <string name="loot_entry3">Item 3</string>
    <string name="loot_entry4">Item 4</string>
    <string name="btn_new_item">New Item</string>
    <string name="btn_edit_item">Edit Item</string>
    <string name="btn_delete_item">Delete Item</string>
    <string name="btn_save_list">Save List</string>
    <string name="btn_load_list">Load List</string>
    <string name="btn_delete_list">Delete List</string>
    <string name="btn_select_all">Select All</string>
    <string name="btn_select_none">Select None</string>
    <string name="btn_quick_remove">Remove</string>
    <string name="btn_quick_add">Add</string>
    <string name="btn_generate_list">Generate</string>
    <string name="new_char_name">Name:</string>
    <string name="new_char_class">Class:</string>
    <string name="new_char_race">Race:</string>
    <string name="new_char_background">Background:</string>
    <string name="new_char_alignment">Alignment:</string>
    <string name="btnClear">Clear</string>
    <string-array name="class_array">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="align_array">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string-array name="bg_array">
        <item>Acolyte</item>
        <item>Charlatan</item>
        <item>Criminal</item>
        <item>Entertainer</item>
        <item>Folk Hero</item>
        <item>Gladiator</item>
        <item>Guild Artisan</item>
        <item>Guild Merchant</item>
        <item>Hermit</item>
        <item>Knight</item>
        <item>Noble</item>
        <item>Outlander</item>
        <item>Pirate</item>
        <item>Sage</item>
        <item>Sailor</item>
        <item>Soldier</item>
        <item>Spy</item>
        <item>Urchin</item>
    </string-array>
    <string-array name="race_array">
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string-array name="rarity_array">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Very Rare</item>
        <item>Legendary</item>
        <item>Artifact</item>
    </string-array>
    <string name="lblItemName">Item Name:</string>
    <string-array name="type_array">
        <item>Adventuring Gear</item>
        <item>Ammunition</item>
        <item>Armor</item>
        <item>Clothing</item>
        <item>Equipment Pack</item>
        <item>Exotic Melee</item>
        <item>Exotic Ranged</item>
        <item>Focus</item>
        <item>Heavy Armor</item>
        <item>Holy Symbol</item>
        <item>Light Armor</item>
        <item>Martial Melee</item>
        <item>Martial Ranged</item>
        <item>Medium Armor</item>
        <item>Mount</item>
        <item>Poison</item>
        <item>Potion</item>
        <item>Ring</item>
        <item>Rod</item>
        <item>Scroll</item>
        <item>Shield</item>
        <item>Simple Melee</item>
        <item>Simple Ranged</item>
        <item>Staff</item>
        <item>Tool</item>
        <item>Vehicle</item>
        <item>Wand</item>
        <item>Weapon</item>
        <item>Wondrous Item</item>
    </string-array>
    <string name="item_type">Type:</string>
    <string name="item_cost">Cost:</string>
    <string name="cost_placeholder">0 gp</string>
    <string name="item_weight">Weight:</string>
    <string name="weight_placeholder">0 lb</string>
    <string name="item_attribute">Attributes:</string>
    <string name="attribute_placeholder">(AC, Damage Type, etc)</string>
    <string name="item_notes">Notes:</string>
    <string name="notes_placeholder">(Combat, Utility, etc)</string>
    <string name="item_description">Description:</string>
    <string name="description_placeholder"></string>
    <string name="item_attunement">Requires Attunement</string>
    <string name="item_consumable">Consumable</string>
    <string name="item_rarity">Rarity</string>
</resources>
