<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anachronda.www.thecompletedndcompanion.NewSpellbook">

    <Spinner
        android:id="@+id/ddlCharacters"
        android:layout_width="313dp"
        android:layout_height="41dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/lvSpellList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvSpellList"
        android:layout_width="365dp"
        android:layout_height="180dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="23dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddSkill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ddlCharacters" />

    <ListView
        android:id="@+id/lvGrimoire"
        android:layout_width="365dp"
        android:layout_height="250dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:onClick="addSpell"
        android:text="@string/btn_add_skill"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvSpellList" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:onClick="removeSpell"
        android:text="@string/btn_remove_skill"
        app:layout_constraintBottom_toTopOf="@+id/lvGrimoire"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/btnAddSkill"
        app:layout_constraintTop_toBottomOf="@+id/lvSpellList" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:onClick="saveBook"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toTopOf="@+id/lvGrimoire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/lvSpellList" />
</android.support.constraint.ConstraintLayout>
